--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@ a:hover {
     <a href="https://facebook.com/Dafausto/"><i class="fa fa-facebook-official w3-hover-opacity"></a></i>
     <a href="https://foursquare.com/v/mama-lucia/4b623e5bf964a5203e3e2ae3"><i class="fa fa-foursquare w3-hover-opacity"></a></i>
   </div>
-  <p>Designed by <a href="https:VerStyleImages.live" title="VerStyle Images" target="_blank" class="w3-hover-text-orange">VerStyle Images.</a></p>
+  <p>Designed by <a href="https://VerStyleImages.live" title="VerStyle Images" target="_blank" class="w3-hover-text-orange">VerStyle Images.</a></p>
 </footer>
  
 <script>
