--- a/index.html
+++ b/index.html
@@ -392,12 +392,12 @@ a:hover {
 
   <div class="w3-row w3-padding-32 w3-section">
     <div class="w3-col m4 w3-container">
-      <img src="Mama Lucia Google Maps.png" class="w3-image w3-round" style="width:100%">
+      <img src="Mamma Lucia Google Maps.png" class="w3-image w3-round" style="width:100%">
     </div>
     <div class="w3-col m8 w3-panel">
       <div class="w3-large w3-margin-bottom">
-        <a href="https://goo.gl/maps/1FTacrEvKCwZT8XS9" title="Mama Lucia on Google Maps"><i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Perring Plaza<br>1991 East Joppa Road<br>Baltimore, MD  21234></a><br>
-        <a href="tel:+14106655900" title="Call Mama Lucia"><i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Phone: (410)665-5900</a><br>
+        <a href="https://goo.gl/maps/1FTacrEvKCwZT8XS9" title="Mamma Lucia on Google Maps"><i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Perring Plaza<br>1991 East Joppa Road<br>Baltimore, MD  21234</a><br>
+        <a href="tel:+14106655900" title="Call Mamma Lucia"><i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Phone: (410)665-5900</a><br>
       </div>
       </form>
     </div>
