--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Mama Lucia</title>
+<title>Mamma Lucia</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width; initial-scale=1; maximum-scale=1; user-scalable=0">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -392,7 +392,7 @@ a:hover {
 
   <div class="w3-row w3-padding-32 w3-section">
     <div class="w3-col m4 w3-container">
-      <img src="Mamma Lucia Google Maps.png" class="w3-image w3-round" style="width:100%">
+      <img src="Mama Lucia Google Maps.png" class="w3-image w3-round" style="width:100%">
     </div>
     <div class="w3-col m8 w3-panel">
       <div class="w3-large w3-margin-bottom">
