--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ a:hover {
 <!-- First Parallax Image with Logo Text -->
 <div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
   <div class="w3-display-middle" style="white-space:nowrap;">
-    <span class="w3-full w3-padding-large w3-xlarge w3-wide w3-animate-opacity"><img src="Mama-Lucia-White-Logo.png" width="100%" height="100%"></span>
+    <span class="w3-full w3-padding-large w3-xlarge w3-wide w3-animate-opacity"><a href="Mamma Lucia Menu.png"download><img src="Mama-Lucia-White-Logo.png" width="100%" height="100%"></span></a>
   </div>
 </div>
 
