--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ a:hover {
 	<th>$13.99</th>
      </tr>
      <tr>
-	<th>Spaghetti Alla Carbonara<br><sub><em>Italian panchetta (bacon) and creamy egg sauce.</em></sub></th>
+	<th>Spaghetti Alla Carbonara<br><sub><em>Italian pancetta (bacon) and creamy egg sauce.</em></sub></th>
 	<th>$14.99</th>
      </tr>
      <tr>
@@ -166,11 +166,11 @@ a:hover {
 	<th>$13.99</th>
      </tr>
      <tr>
-	<th>Mostaccioli Alla Matriciana<br><sub><em>Italian Pancetta (bacon) in a spicy marinara sauce.</em></sub></th>
+	<th>Mostaccioli Alla Matriciana<br><sub><em>Italian pancetta (bacon) in a spicy marinara sauce.</em></sub></th>
 	<th>$14.99</th>
      </tr>
      <tr>
-	<th>Fetuccine Alfredo</th>
+	<th>Fettuccine Alfredo</th>
 	<th>$15.99</th>
      </tr>
      <tr>
@@ -219,7 +219,7 @@ a:hover {
      </tr>
      <tr>
 	<th>Veal Marsala<br><sub><em>Fresh veal with mushrooms and marsala sauce.</em></sub></th>
-	<th>$9.50</th>
+	<th>$20.99</th>
      </tr>
      <tr>
 	<th>Veal Piccata<br><sub><em>Fresh veal with lemon sauce and capers.</em></sub></th>
@@ -230,7 +230,7 @@ a:hover {
 	<th>$20.99</th>
      </tr>
      <tr>
-	<th>Veal Cardofl<br><sub><em>Fresh veal with mushrooms, artichokes and marsala wine.</em></sub></th>
+	<th>Veal Carciofi<br><sub><em>Fresh veal with mushrooms, artichokes and marsala wine.</em></sub></th>
 	<th>$20.99</th>
      </tr>
      <tr>
