--- a/index.html
+++ b/index.html
@@ -138,6 +138,10 @@ a:hover {
 	<th>$12.99</th>
      </tr>
      <tr>
+	<th>Grilled Chicken & Shrimp Salad</th>
+	<th>$14.99</th>
+     </tr>
+     <tr>
 	<th><h3>Soups</h3></th>
 	<th> </th>
      </tr>
