--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ a:hover {
 	<th>$20.99</th>
      </tr>
      <tr>
-	<th>Posillipo<br><sub><em>Fresh mussels, clams, shrimp, and squid in marinara sauce.</em></sub></th>
+	<th>Posilipo<br><sub><em>Fresh mussels, clams, shrimp, and squid in marinara sauce.</em></sub></th>
 	<th>$25.99</th>
      </tr>
      <tr>
